Modified JVM arguments