@@ -59,7 +59,7 @@
         <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
         <junit.jupiter.version>5.6.0</junit.jupiter.version>
         <junit.platform.version>1.6.0</junit.platform.version>
-        <argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
+        <argLine>-Xmx512m</argLine>
     </properties>
 
 
